--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <label for="tanggal">Pilih Tanggal:</label>
-<input type="date" id="tanggal" onchange="updateRuangan()">
+    <input type="date" id="tanggal" onchange="changeDate()">
+    
 
  <h1>Denah dan Nomor-Nomor Ruangan SMA Negeri 6 Bekasi</h1>
     <div class="denah-container">
